 6. When showing artist works, if more than 1 composer then split into groups.
 7. Fix custom scrollbar in 'Help' pages.
 8. Remove option of 'CD Player' as a top-level item. This is in 'Extras' and
    can be pinned if required.
 9. When listing works under a genre filter by that genre.
10. Don't show 'Search within list' for advanced search results.

5.0.1
-----
1. Don't automatically hide 'Music Walk With Me', change this to a server-side
   preference.
2. Fix 'Automatic' theme.
3. Remove transparent border around PNG icons.

5.0.0
-----
 1. Add server-side option to combine 'Apps' and 'Radios' menus.
 2. Change icon to match Lyrion.
 3. Add 'Lyrion' colour - different between Light and Dark themes.
 4. Add a 'Lyrion' theme, based upon dark theme of forum.
 5. Add Lyrion logo, and link, to top-right of settings, information, and help
    pages - if screen with is 600px or more.
 6. If combining 'Apps' and 'Radios', hide 'Music Walk With Me' as this
    duplicates Material functionality.
 7. When listing works, show composer as a header.
 8. When listing 'Works' main category ask if want to show 'All Works',
    'Composers', or 'Genres'
 9. Add Work, Performance, and Album to details in MAI track view.
10. No album-sort for Works-Album list.
11. Fix 'All tracks' for Works-Album list.
12. Remove 'Append random album/release to queue' from Works-album actions.
13. Request smaller image for backgrounds, and reduce blur.
14. Fix custom scrollbar in iframes.
15. Default to 'Darker' for all OSs.
16. Add custom look to settings pages combo-box menus.
17. Add custom icons for 'LCI' and 'Live365'
18. Add tag to 'viewport' meta-data to restore old Chrome behaviour when
    showing keyboard on Android.
19. Take into account layout and if tech info is shown when determining if to
    show context strings in now-playing bar.
20. Support disc-subtitles from LMS >= 9.0

4.6.2
-----
1. When adding random album/release to queue ensure title is asked from LMS.